# fastapi-tortoise-aerich-demo

./: .pre-commit-config.yaml  README.md  pyproject.toml
app/: main.py  settings.py
app/models/: permissions.py  users.py
app/routers/: users.py
migrations/models/: 0_20250417095839_init.py  1_20250417103726_update.py  2_20250417104833_update.py
